--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,36 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <!-- Controller 설정 -->
+  <!-- <servlet>
+  		<servlet-name>test2</servlet-name>
+			<servlet-class>j1111.Test2</servlet-class>	
+  </servlet>
+	  	
+ 	<servlet-mapping>
+ 		<servlet-name>test2</servlet-name>
+ 		<url-pattern>/t2</url-pattern>	
+ 	</servlet-mapping> -->
+ 	
+ 	 <servlet>
+ 		<servlet-name>test2</servlet-name>
+ 		<servlet-class>j1111.Test2</servlet-class>
+ 	</servlet>
+ 	
+ 	<servlet-mapping>
+ 		<servlet-name>test2</servlet-name>
+ 		<url-pattern>/T2</url-pattern>
+ 	</servlet-mapping>
+ 	
+ 	<servlet>
+ 		<servlet-name>test12</servlet-name>
+ 		<servlet-class>j1111.Test12</servlet-class>	<!--테스트12 자바가 실행됨  -->
+ 	</servlet>
+ 	
+ 	<servlet-mapping>
+ 		<servlet-name>test12</servlet-name>
+ 		<url-pattern>/test12ok</url-pattern>
+ 	</servlet-mapping>
+  
 </web-app>
